[package]
name = "throttler"
version = "0.1.3"
authors = ["gciruelos <gonzalo.ciruelos@gmail.com>"]
repository = "https://github.com/gciruelos/rust-throttler.git"
homepage = "https://github.com/gciruelos/rust-throttler"
documentation = "https://docs.rs/throttler"

description = "Simple throttler written in Rust"
license = "Apache-2.0"

[dependencies]
